# ollama-proxy

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONAL_COMMITS.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  build.rs  clippy.toml  rust-toolchain.toml
.github/: config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cross-platform.yml  publish.yml  rust-ci.yml  scheduled-checks.yml  security-audit.yml
src/: db_logger.rs  db_logger_tests.rs  logger.rs  logger_tests.rs  main.rs  size_parser.rs  time_parser.rs
