[package]
name = "http_server"
version = "0.1.0"
edition = "2024"
build = "build.rs"
description = "A proxy server for the Ollama API with authentication, IP allowlisting, and HTTPS support"
repository = "https://github.com/hehaoqian/ollama-proxy"
license = "MIT"
readme = "README.md"

[features]
default = ["database-logging"]
database-logging = ["dep:sqlx"]

[dependencies]
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.2", features = ["full", "client"] }
tokio = { version = "1.35", features = ["full"] }
http-body-util = "0.1"
bytes = "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
hyper-rustls = { version = "0.27", features = ["http2"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "json"], optional = true }

[dev-dependencies]
filetime = "0.2"
tempfile = "3.20"
